Add Q4_1, Q4_K, Q5_K and Q6_K quantizations support + improve GGUF parsing performance.