@@ -15,13 +15,13 @@ Besides the educational value, this project will be used to test and tune compil
 
  - Single file, no dependencies
  - [GGUF format](https://github.com/ggerganov/ggml/blob/master/docs/gguf.md) parser
- - Llama 3 tokenizer based on [minbpe](https://github.com/karpathy/minbpe)
- - Llama 3 inference with Grouped-Query Attention
+ - Llama 3+ tokenizer based on [minbpe](https://github.com/karpathy/minbpe)
+ - Llama 3+ inference with Grouped-Query Attention
  - Support Llama 3.1 (ad-hoc RoPE scaling) and 3.2 (tie word embeddings)
- - Support F16, BF16 weights + Q8_0 and Q4_0 quantizations
+ - Support F16, BF16, F32 weights + Q4_0, Q4_1, Q4_K, Q5_K ,Q6_K, Q8_0 quantizations
  - Fast matrix-vector multiplication routines using Java's [Vector API](https://openjdk.org/jeps/469)
  - Simple CLI with `--chat` and `--instruct` modes.
- - GraalVM's Native Image support (EA builds [here](https://github.com/graalvm/oracle-graalvm-ea-builds))
+ - GraalVM's Native Image support
  - AOT model pre-loading for instant time-to-first-token
 
 **Interactive `--chat` mode in action:**
@@ -45,38 +45,24 @@ Download pure `Q4_0` and (optionally) `Q8_0` quantized .gguf files from:
   - https://huggingface.co/mukel/Meta-Llama-3.1-8B-Instruct-GGUF
   - https://huggingface.co/mukel/Meta-Llama-3-8B-Instruct-GGUF
 
-The pure `Q4_0` quantized models are recommended, except for the very small models (1B), please be gentle with [huggingface.co](https://huggingface.co) servers: 
-```
-# Llama 3.2 (3B)
-curl -L -O https://huggingface.co/mukel/Llama-3.2-3B-Instruct-GGUF/resolve/main/Llama-3.2-3B-Instruct-Q4_0.gguf
+Or from unsloth
+https://huggingface.co/unsloth/Llama-3.2-1B-Instruct-GGUF
 
-# Llama 3.2 (1B)
-curl -L -O https://huggingface.co/mukel/Llama-3.2-1B-Instruct-GGUF/resolve/main/Llama-3.2-1B-Instruct-Q8_0.gguf
-
-# Llama 3.1 (8B)
-curl -L -O https://huggingface.co/mukel/Meta-Llama-3.1-8B-Instruct-GGUF/resolve/main/Meta-Llama-3.1-8B-Instruct-Q4_0.gguf
-
-# Llama 3 (8B)
-curl -L -O https://huggingface.co/mukel/Meta-Llama-3-8B-Instruct-GGUF/resolve/main/Meta-Llama-3-8B-Instruct-Q4_0.gguf
-
-# Optionally download the Q8_0 quantized models
-# curl -L -O https://huggingface.co/mukel/Meta-Llama-3-8B-Instruct-GGUF/resolve/main/Meta-Llama-3-8B-Instruct-Q8_0.gguf
-# curl -L -O https://huggingface.co/mukel/Meta-Llama-3.1-8B-Instruct-GGUF/resolve/main/Meta-Llama-3.1-8B-Instruct-Q8_0.gguf
-```
-
-#### Optional: quantize to pure `Q4_0` manually
+#### Optional: Pure quantizations
 
 In the wild, `Q8_0` quantizations are fine, but `Q4_0` quantizations are rarely pure e.g. the `token_embd.weights`/`output.weights` tensor are quantized with `Q6_K`, instead of `Q4_0`.  
-A **pure** `Q4_0` quantization can be generated from a high precision (F32, F16, BFLOAT16) .gguf source 
-with the `llama-quantize` utility from [llama.cpp](https://github.com/ggerganov/llama.cpp) as follows:
+A **pure** quantization can be generated from a high precision (F32, F16, BFLOAT16) .gguf source 
+with the `llama-quantize` utility from [llama.cpp](https://github.com/ggml-org/llama.cpp) as follows:
 
 ```bash
-./llama-quantize --pure ./Meta-Llama-3-8B-Instruct-F32.gguf ./Meta-Llama-3-8B-Instruct-Q4_0.gguf Q4_0
+./llama-quantize --pure ./Meta-Llama-3-8B-Instruct-BF16.gguf ./Meta-Llama-3-8B-Instruct-Q4_0.gguf Q4_0
 ```
+
+Pick any of the supported quantizations: `Q4_0`, `Q4_1`, `Q4_K`, `Q5_K`, `Q6_K`, `Q8_0`.
 
 ## Build and run
 
-Java 21+ is required, in particular the [`MemorySegment` mmap-ing feature](https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/nio/channels/FileChannel.html#map(java.nio.channels.FileChannel.MapMode,long,long,java.lang.foreign.Arena)).
+Java 21+ is required, in particular for the [`MemorySegment` mmap-ing feature](https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/nio/channels/FileChannel.html#map(java.nio.channels.FileChannel.MapMode,long,long,java.lang.foreign.Arena)).
 
 [`jbang`](https://www.jbang.dev/) is a perfect fit for this use case, just:
 ```
@@ -88,19 +74,9 @@ chmod +x Llama3.java
 ./Llama3.java --help
 ```
 
-## Run from source
+#### Optional: Makefile
 
-```bash
-java --enable-preview --source 21 --add-modules jdk.incubator.vector Llama3.java -i --model Meta-Llama-3-8B-Instruct-Q4_0.gguf
-```
-
-#### Optional: Makefile + manually build and run
-
-A simple [Makefile](./Makefile) is provided, run `make` to produce `llama3.jar` or manually:
-```bash
-javac -g --enable-preview -source 21 --add-modules jdk.incubator.vector -d target/classes Llama3.java
-jar -cvfe llama3.jar com.llama4j.Llama3 LICENSE -C target/classes .
-```
+A simple [Makefile](./Makefile) is provided, run `make jar` to produce `llama3.jar`.
 
 Run the resulting `llama3.jar` as follows: 
 ```bash
@@ -109,21 +85,10 @@ java --enable-preview --add-modules jdk.incubator.vector -jar llama3.jar --help
 
 ### GraalVM Native Image
 
-Compile to native via `make` (recommended):
+Compile with `make native` to produce a `llama3` executable, then:
 
 ```bash
-make native
-```
-Or directly:
-
-```bash
-native-image -H:+UnlockExperimentalVMOptions -H:+VectorAPISupport -H:+ForeignAPISupport -O3 -march=native --enable-preview --add-modules jdk.incubator.vector --initialize-at-build-time=com.llama4j.FloatTensor -Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0 -jar llama3.jar -o llama3
-```
-
-Run as Native Image:
-
-```bash
-./llama3 --model Llama-3.2-1B-Instruct-Q8_0 --chat
+./llama3 --model Llama-3.2-1B-Instruct-Q8_0.gguf --chat
 ```
 
 ### AOT model preloading
@@ -140,14 +105,15 @@ It can still run other models, although incurring the usual parsing overhead.
 
 ## Performance
 
-GraalVM now supports more [Vector API](https://openjdk.org/jeps/469) operations. To give it a try, you need GraalVM for JDK 24 – get the EA builds from [`oracle-graalvm-ea-builds`](https://github.com/graalvm/oracle-graalvm-ea-builds) or sdkman: `sdk install java 24.ea.20-graal`.  
+[GraalVM 25+](https://www.graalvm.org/downloads) is recommended for the absolute best performance, it provides partial but good support for the [Vector API](https://openjdk.org/jeps/469).
+
 By default, the "preferred" vector size is used, it can be force-set with `-Dllama.VectorBitSize=0|128|256|512`, `0` means disabled.
 
 #### llama.cpp
 
 Vanilla `llama.cpp` built with `make`.
 ```bash
-./llama-cli --version                                                                                                                                                                          130 ↵
+./llama-cli --version
 version: 3862 (3f1ae2e3)
 built with cc (GCC) 14.2.1 20240805 for x86_64-pc-linux-gnu
 ```
